<resources>
    <string name="stepik_free_courses_title">Stepik.org: free courses</string>
    <string name="asset_statements" translatable="false">
        [{
        \"include\": \"https://stepik.org/.well-known/assetlinks.json\"
        }]
    </string>
    <string name="local_remind_message">We noticed that you still have not selected any courses to
        study. Don\'t delay, enroll in a free course right now!
    </string>
    <string name="app_name" translatable="false">Stepik</string>
    <string name="facebook_app_id" translatable="false">171127739724012</string>
    <string name="host_name" translatable="false">stepik.org</string>
    <string name="secondary_host_name" translatable="false">stepic.org</string>
    <string name="sign_up">Sign up</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="remind_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="not_video_player_error">Please, install player for video playing</string>
    <string name="password_hint">Password</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>
    <string name="tap_to_see_more">more…</string>
    <string name="loading">Loading</string>
    <string name="section_title_with_number" translatable="false">%d. %s</string>
    <string name="soft_deadline">Soft deadline</string>
    <string name="hard_deadline">Hard deadline</string>
    <string name="steps_title">Steps</string>
    <string name="video_title">Video</string>
    <string name="wi_fi_setting">Wi-Fi only download</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="title_confirmation">Please confirm</string>
    <string name="yes">Yes</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="no">No</string>
    <string name="allow_mobile_download_title">Allow mobile downloading</string>
    <string name="allow_mobile_message">Allow your device to download videos over your mobile
        connection when Wi-Fi is not available?
    </string>
    <string name="allow_mobile_snack">Mobile downloading is disabled. Turn on in settings</string>
    <string name="drop_course">Drop the course</string>
    <string name="you_dropped">"You dropped %s"</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="connectionProblems">Connection was lost</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="explain_permission">To cache courses and play videos offline, 
        Stepik needs permission to access your phone\'s storage.
    </string>
    <string name="explain_calendar_permission">To add deadlines, Stepik needs
        permission to access your calendar. The app doesn\'t change or read your events.
    </string>
    <string name="allow_question">Allow?</string>
    <string name="video_quality">Video quality of downloading</string>
    <string name="video_quality_playing">Video quality of playing</string>
    <string name="video_quality_presence_message">Please choose a video quality for downloading all further video courses:</string>
    <string name="download_system_request_title">step - %s in lesson - %s</string>
    <string name="download_error">An error occurred while downloading %s</string>
    <string name="download_error_insufficient_storage">: insufficient storage</string>
    <string name="download_error_system_manager">A system\'s download manager error occurred while downloading content. If an error persists, please, contact support.</string>
    <string name="sync_problem">There was a problem syncing the data, please try again later
    </string>
    <string name="empty_courses">Looks like you haven\'t enrolled in any courses yet</string>
    <string name="empty_courses_anonymous">Browse the courses without authorization, or sign in to
        enroll
    </string>
    <string name="join_course_web_exception">Try to join the course in web</string>
    <string name="downloads">Downloads</string>
    <string name="loading_message">Please wait…</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="gb">GB</string>
    <string name="empty">Empty</string>
    <string name="clear_videos">Are you sure you want to delete all cached videos?</string>
    <string name="empty_downloading">No downloaded videos</string>
    <string name="find_courses_hint">Search courses</string>
    <string name="search_title">Search</string>
    <string name="empty_search">Courses not found</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong. Please, try again.</string>
    <string name="try_again">Try again</string>
    <string name="correct_free_response">Your answer was saved.</string>
    <string name="review_warning">This is a peer-review assignment. Tap to open in web and receive
        the points.
    </string>
    <string name="password_too_short">Password must be a minimum of 6 characters.</string>
    <string name="registration_consent_required"><![CDATA[I have read and I agree to the <a href="https://stepik.org/page/terms/?from_mobile_app=true">terms of use</a>, the <a href="https://stepik.org/page/privacy/?from_mobile_app=true">privacy policy</a> and authorize the processing of my personal data]]></string>
    <string name="registration_consent_marketing">Send me news, helpful recommendations, and special offers</string>
    <string name="registration_consent_marketing_helper">Max 2 emails per week. Unsubscribe anytime</string>
    <string name="registration_consent_required_error">Please agree to the terms to continue</string>
    <string name="social_auth_consent_title">Review and Accept Terms</string>
    <string name="social_auth_consent_continue">Continue</string>
    <string name="send">Send</string>
    <string name="email_sent">We have sent you an e-mail.</string>
    <string name="email_wrong">The e-mail address is not assigned to any user account.</string>
    <string name="are_you_sure_logout">All saved videos will be removed. Are you sure?
    </string>
    <string name="feedback_good_description">The app is a pleasure to use.</string>
    <string name="feedback_good">excellent</string>
    <string name="feedback_bad">terrible</string>
    <string name="feedback_bad_description">The app is inconvenient, loading is slow, there are
        video playback issues.
    </string>
    <string name="feedback_title">Give feedback</string>
    <string name="email_incorrect">E-mail is incorrect</string>
    <string name="feedback_subject">Feedback for the Stepik Android app</string>
    <string name="feedback_sent">Feedback is sent</string>
    <string name="feedback_fail">Sorry, service is not available. Try later</string>
    <string name="internet_problem">Sorry, the connection is not available. Try again later</string>
    <string name="feedback_fill_fields">Fill empty fields</string>
    <string name="video_time_delimiter" translatable="false">/</string>
    <string name="x0_5" translatable="false">x0.5</string>
    <string name="x1" translatable="false">x1.0</string>
    <string name="x0_75" translatable="false">x0.75</string>
    <string name="x1_25" translatable="false">x1.25</string>
    <string name="x1_5" translatable="false">x1.5</string>
    <string name="x1_75" translatable="false">x1.75</string>
    <string name="x2_0" translatable="false">x2.0</string>
    <string name="open_in_external_player">Open in an external player</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_learn_list">Deadlines, new modules, certificates</string>
    <string name="vibration_title">Vibration</string>
    <string name="empty_try_later">For now it\'s empty, try again later.</string>
    <string name="sound_title">Sound</string>
    <string name="percent_symbol" translatable="false">%d%%</string>
    <string name="cached_title">Cached</string>
    <string name="remove_all">Remove all</string>
    <string name="hint_for_idea">Type your suggestions, comments or ideas</string>
    <string name="feedback_from">From</string>
    <string name="load_more">more</string>
    <string name="leave_first_comment">No discussions yet. Feel free to start one.</string>
    <string name="share_title">Share</string>
    <string name="last_discussion">Last discussion</string>
    <string name="most_liked_discussion">Most liked</string>
    <string name="most_active_discussion">Most active</string>
    <string name="recent_activity_discussion">Recent activity</string>
    <string name="calendar_title">Calendar</string>
    <string name="calendar_detail">Modules in this course have deadlines. To complete this course
        and get a certificate, add deadlines to your calendar and get a reminder 2 days before the
        due date.
        To manage the appearance of this message go to the app settings.
    </string>
    <string name="add_to_the_calendar">Add to the calendar</string>
    <string name="certificates_title">Certificates</string>
    <string name="copy_link_title">Copy Link</string>
    <string name="certificate_share_share_link">Share via…</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="other_title">Other</string>
    <string name="reviews_title">Reviews</string>
    <string name="teaching_title">Teaching</string>
    <string name="notification_comment_list">Comments and replies</string>
    <string name="profile_title">Profile</string>
    <string name="notification_about_learning">Notify about streaks</string>
    <string name="about_app_title">About</string>
    <string name="my_courses_title">My courses</string>
    <string name="deadlines_menu_create">Create schedule</string>
    <string name="deadlines_menu_edit">Edit schedule</string>
    <string name="deadlines_menu_remove">Remove schedule</string>
    <string name="course_restore_purchase">Restore purchase</string>
    <string name="course_action_archive_add">Move to Archived</string>
    <string name="course_action_favorites_add">Add to Favorites</string>
    <string name="profile_notifcation_title">Notifications</string>
    <string name="profile_marketing_notifications_switch">Receive marketing emails</string>
    <string name="filter_dismiss_action">Dismiss</string>
    <string name="filter_apply_action">Show result</string>
    <string name="submissions_filter_dialog_title">Search submissions</string>
    <string name="submissions_filter_submission_status_subtitle">Submission status</string>
    <string name="submissions_filter_any_status_radio_button_title">Any</string>
    <string name="submissions_filter_correct_status_radio_button_title">Correct</string>
    <string name="submissions_filter_partially_correct_status_radio_button_title">Partially correct</string>
    <string name="submissions_filter_incorrect_status_radio_button_title">Wrong</string>
    <string name="submissions_filter_date_sort_subtitle">Submission date sort</string>
    <string name="submissions_filter_desc_date_radio_button_title">First new</string>
    <string name="submissions_filter_asc_date_radio_button_title">First old</string>
    <string name="submissions_filter_review_status_subtitle">Reviews</string>
    <string name="submissions_filter_any_review_status_radio_button_title">Any review status</string>
    <string name="submissions_filter_finished_review_status_radio_button_title">Review done</string>
    <string name="submissions_filter_awaiting_review_status_radio_button_title">Awaiting review</string>
    <string name="wishlist_title">Wishlist</string>
    <string name="course_benefits_revenue_title">Revenue</string>
    <string name="course_search_menu_title">Search course</string>
</resources>