<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/course_benefits"
        android:title="@string/course_benefits_revenue_title" />
    <item
        android:id="@+id/share_course"
        android:title="@string/share_title" />
    <item
        android:id="@+id/favorite_course"
        android:title="@string/course_action_favorites_add" />
    <item
        android:id="@+id/archive_course"
        android:title="@string/course_action_archive_add"/>
    <item
        android:id="@+id/drop_course"
        android:title="@string/drop_course"/>
    <item
        android:id="@+id/wishlist_course"
        android:title="@string/wishlist_title"
        android:icon="@drawable/ic_wishlist_active"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/course_search"
        android:title="@string/course_search_menu_title"
        android:icon="@drawable/ic_action_search"
        app:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/restore_purchase"
        android:title="@string/course_restore_purchase" />
</menu>