<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_dark"
        android:title="@string/about_course"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_share_dark"
        android:title="@string/share_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_calendar"
        android:title="@string/add_to_the_calendar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_deadlines_create"
        android:title="@string/deadlines_menu_create"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_deadlines_edit"
        android:title="@string/deadlines_menu_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_deadlines_remove"
        android:title="@string/deadlines_menu_remove"
        app:showAsAction="never" />

</menu>