<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/share_item_padding"
        android:text="@string/share_title"
        android:textColor="?android:textColorSecondary"/>

    <TextView
        android:id="@+id/share_open_in_browser"
        style="@style/BottomSheetShareItem"
        android:drawableLeft="@drawable/ic_open_in_browser_material_24px"
        android:drawableStart="@drawable/ic_open_in_browser_material_24px"
        android:text="@string/open_in_browser" />

    <TextView
        android:id="@+id/share_certificate_copy_link"
        style="@style/BottomSheetShareItem"
        android:drawableLeft="@drawable/ic_content_copy_material_24"
        android:drawableStart="@drawable/ic_content_copy_material_24"
        android:text="@string/copy_link_title" />

    <TextView
        android:id="@+id/share_certificate_all"
        style="@style/BottomSheetShareItem"
        android:drawableLeft="@drawable/ic_share_material_24px"
        android:drawableStart="@drawable/ic_share_material_24px"
        android:text="@string/certificate_share_share_link" />

</LinearLayout>