<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/profile_notifcation_title"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/profile_block_margin"
        android:layout_marginRight="@dimen/profile_block_margin"
        android:layout_marginBottom="10dp"
        style="@style/ProfileItemHeader" />

    <org.stepic.droid.ui.custom.BetterSwitch
        android:id="@+id/notificationStreakSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody1"
        android:layout_marginLeft="@dimen/profile_block_margin"
        android:layout_marginRight="@dimen/profile_block_margin"
        android:text="@string/notification_about_learning" />

    <include
        android:id="@+id/notificationIntervalChooser"
        layout="@layout/view_notification_interval_chooser"/>

    <org.stepic.droid.ui.custom.BetterSwitch
        android:id="@+id/marketingNotificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody1"
        android:layout_marginLeft="@dimen/profile_block_margin"
        android:layout_marginRight="@dimen/profile_block_margin"
        android:switchPadding="@dimen/profile_block_vertical_margin"
        android:text="@string/profile_marketing_notifications_switch"
        android:visibility="gone"
        tools:visibility="visible" />

    <include layout="@layout/view_divider_vertical" />

</androidx.appcompat.widget.LinearLayoutCompat>
